feat: ⬆️ upgrade to JDK 25